corrected alignments

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -121,7 +121,7 @@ p {
 .more-info-link{
     font-weight: bolder;
     color:#444;
-    float:right;
+    float:left;
     margin-right: 10px;
     margin-bottom: 30px;
     padding-bottom: 20px; 
@@ -135,6 +135,9 @@ p {
     padding-right: 20px;
     padding-left: 20px;
     padding-bottom: 30px;
+    padding-top: 35px;
+    margin-top: -45px;
+    margin-bottom: 0px;
 }
 
 #map2 {
@@ -150,8 +153,13 @@ p {
     margin-left: -10px;
 }
 
+.text-field3{
+    border:2px solid black;
+    background-color: #000;
+}
+
 .txt-area{
     margin-top: 25px;
     width: 100%;
-    height: 70px;
+    height: 100px;
 }
